--- a/CardShopping.html
+++ b/CardShopping.html
@@ -12,9 +12,9 @@
         <H1 style="margin-left: 20px;margin-right: 20px;font-size: 40px;width: 1000px">Áo thun meme hài hước Áo thun Oversize '' Muốn Nghỉ Học'' full size.</H1>
         <h4 style="margin-left: 20px;margin-right: 20px;font-family: 'Times New Roman', Times, serif; width: 1000px; font-size: 30px; font-weight: lighter;">Bạn cảm thấy chán nản với việc đi học, bạn không muốn ngồi trong lớp mấy tiếng đồng hồ mà không được kiến thức nào. Đừng lo với chiếc áo này bạn sẽ không được nghỉ học nhưng bạn có thể báo cho lớp mình rằng bạn chán học.</h4>
         <Br>
-        <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; margin-left: 20px;; margin-right: 70%; font-size: 50px; border: 5px solid #B43F3F; text-align: center; border-radius: 10px;">90.000<u>đ</u></p>
-        <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; float: right; text-align: center ;margin-right: 20px; padding: 10px 20px; font-size: 60px; border: 4px solid #FF8225; border-radius: 10px;">Thêm Hàng</p>
-        <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; float: left; text-align: center ;margin-left: 20px; padding: 13px 110px ; font-size: 60px; background-color: #FF8225 ; border-radius: 10px;">MUA NGAY</p>
+        <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; margin-right: 20px;; margin-left: 70%; font-size: 50px; border: 5px solid #B43F3F; text-align: center; border-radius: 10px;">90.000<u>đ</u></p>
+        <button style="font-family: Verdana, Geneva, Tahoma, sans-serif; float: left; text-align: center ;margin-left: 20px; padding: 10px 20px; font-size: 60px; border: 4px solid #FF8225; border-radius: 10px;">Thêm Hàng</button>
+        <button style="font-family: Verdana, Geneva, Tahoma, sans-serif; float: right; text-align: center ;margin-right: 20px; padding: 13px 110px ; font-size: 60px; background-color: #FF8225 ; border-radius: 10px;">MUA NGAY</button>
     </Div>
     
 </body>
